--- a/custom_components/elehantmi/manifest.json
+++ b/custom_components/elehantmi/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "elehantmi",
   "name": "Elehant Meter Integration",
-  "version": "1.0.0",
+  "version": "1.0.0",  // ← здесь должна быть запятая, если дальше есть поля
   "requirements": ["bleak>=0.19.0"],
   "dependencies": ["bluetooth"],
   "codeowners": ["@SCRAME314"],
@@ -12,9 +12,9 @@
       "local_name": "elehant*",
       "connectable": false
     }
-  ],
+  ],  
   "documentation": "https://github.com/SCRAME314/elehantmi",
-  "issue_tracker": "https://github.com/SCRAME314/elehantmi/issues"
+  "issue_tracker": "https://github.com/SCRAME314/elehantmi/issues",
   "translations": ["translations/en.json", "translations/ru.json"],
   "homeassistant": "2023.8.0"
 }
