--- a/custom_components/elehantmi/manifest.json
+++ b/custom_components/elehantmi/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "elehantmi",
   "name": "Elehant Meter Integration",
-  "version": "1.0.0",  // ← здесь должна быть запятая, если дальше есть поля
+  "version": "1.0.0",
   "requirements": ["bleak>=0.19.0"],
   "dependencies": ["bluetooth"],
   "codeowners": ["@SCRAME314"],
