--- a/custom_components/elehantmi/manifest.json
+++ b/custom_components/elehantmi/manifest.json
@@ -1,8 +1,8 @@
 {
   "domain": "elehantmi",
   "name": "Elehant Meter Integration",
-  "version": "1.1.1",
-  "requirements": ["bleak>=0.19.0"],
+  "version": "1.2.1",
+  "requirements": [],
   "dependencies": ["bluetooth"],
   "codeowners": ["@SCRAME314"],
   "config_flow": true,
@@ -12,10 +12,10 @@
       "local_name": "elehant*",
       "connectable": false
     }
-  ],  
+  ],
   "documentation": "https://github.com/SCRAME314/elehantmi",
   "issue_tracker": "https://github.com/SCRAME314/elehantmi/issues",
+  "loggers": ["custom_components.elehantmi"],
   "translations": ["translations/en.json", "translations/ru.json"],
-  "homeassistant": "2023.8.0",
-  "loggers": ["custom_components.elehantmi"]
+  "homeassistant": "2023.8.0"
 }
